--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | Dr. Echaussidon - Cosmology Research</title>
+    <title>About Me | Edmond Chaussidon - Cosmology Research</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -162,7 +162,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Dr. Echaussidon</h1>
+            <h1>Edmond Chaussidon</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -170,7 +170,6 @@
                     <li><a href="research.html">Research</a></li>
                     <li><a href="publications.html">Publications</a></li>
                     <li><a href="cv.html">CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -180,7 +179,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="profile-image">
-                    <img src="images/profile-placeholder.jpg" alt="Dr. Echaussidon">
+                    <img src="images/profile-placeholder.jpg" alt="Edmond Chaussidon">
                 </div>
                 <div class="bio">
                     <h2>About Me</h2>
@@ -270,7 +269,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <p>&copy; 2025 Dr. Echaussidon. All rights reserved.</p>
+                    <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
                     <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
