--- a/cv.html
+++ b/cv.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Echaussidon - Cosmology Research</title>
+    <title>Edmond Chaussidon - Cosmology Research</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Dr. Echaussidon</h1>
+            <h1>Edmond Chaussidon</h1>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
@@ -23,68 +23,10 @@
         </div>
     </header>
 
-    <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h2>Exploring the Cosmos</h2>
-                <p>Cosmology Researcher • Astrophysicist • Educator</p>
-                <a href="research.html" class="btn">View My Research</a>
-            </div>
-        </div>
-    </section>
 
-    <section class="featured-research">
+    <section class="to be done">
         <div class="container">
-            <h2>Featured Research</h2>
-            <div class="research-grid">
-                <div class="research-item">
-                    <img src="images/research-placeholder-1.jpg" alt="Research Project 1">
-                    <h3>Dark Matter Distribution</h3>
-                    <p>Investigating the spatial distribution of dark matter in galaxy clusters using advanced statistical methods.</p>
-                    <a href="research.html#project1" class="btn-small">Learn More</a>
-                </div>
-                <div class="research-item">
-                    <img src="images/research-placeholder-2.jpg" alt="Research Project 2">
-                    <h3>Cosmic Microwave Background</h3>
-                    <p>Analyzing fluctuations in the CMB to understand the early universe and cosmological parameters.</p>
-                    <a href="research.html#project2" class="btn-small">Learn More</a>
-                </div>
-                <div class="research-item">
-                    <img src="images/research-placeholder-3.jpg" alt="Research Project 3">
-                    <h3>Large-Scale Structure Formation</h3>
-                    <p>Simulating the evolution of cosmic structures from the early universe to present day.</p>
-                    <a href="research.html#project3" class="btn-small">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="latest-publications">
-        <div class="container">
-            <h2>Latest Publications</h2>
-            <ul class="publication-list">
-                <li>
-                    <h3>Title of Your Most Recent Paper (2025)</h3>
-                    <p>Authors: Echaussidon, E., Collaborator, A., et al.</p>
-                    <p>Journal of Cosmology and Astroparticle Physics</p>
-                    <div class="publication-links">
-                        <a href="#" target="_blank">Journal <i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" target="_blank">arXiv <i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" target="_blank">PDF <i class="fas fa-file-pdf"></i></a>
-                    </div>
-                </li>
-                <li>
-                    <h3>Another Recent Publication (2024)</h3>
-                    <p>Authors: Collaborator, B., Echaussidon, E., et al.</p>
-                    <p>The Astrophysical Journal</p>
-                    <div class="publication-links">
-                        <a href="#" target="_blank">Journal <i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" target="_blank">arXiv <i class="fas fa-external-link-alt"></i></a>
-                        <a href="#" target="_blank">PDF <i class="fas fa-file-pdf"></i></a>
-                    </div>
-                </li>
-            </ul>
-            <a href="publications.html" class="btn">View All Publications</a>
+            <h2>To be done</h2>
         </div>
     </section>
 
@@ -92,7 +34,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <p>&copy; 2025 Dr. Echaussidon. All rights reserved.</p>
+                    <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
                     <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
