--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Echaussidon - Cosmology Research</title>
+    <title>Edmond Chaussidon - Cosmology Research</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <header>
         <div class="container">
-            <h1>Dr. Echaussidon</h1>
+            <h1>Edmond Chaussidon</h1>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
@@ -18,7 +19,6 @@
                     <li><a href="research.html">Research</a></li>
                     <li><a href="publications.html">Publications</a></li>
                     <li><a href="cv.html">CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -60,9 +60,9 @@
         </div>
     </section>
 
-    <section class="latest-publications">
+    <section class="selected-publications">
         <div class="container">
-            <h2>Latest Publications</h2>
+            <h2>Selected Publications</h2>
             <ul class="publication-list">
                 <li>
                     <h3>Title of Your Most Recent Paper (2025)</h3>
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <p>&copy; 2025 Dr. Echaussidon. All rights reserved.</p>
+                    <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
                     <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
