--- a/about.html
+++ b/about.html
@@ -169,7 +169,6 @@
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="publications.html">Publications</a></li>
-                    <li><a href="cv.html">CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -272,10 +271,9 @@
                     <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
-                    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://orcid.org/your-orcid" target="_blank"><i class="fab fa-orcid"></i></a>
-                    <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/echaussidon" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://orcid.org/0000-0001-8996-4874" target="_blank"><i class="fab fa-orcid"></i></a>
+                    <a href="https://inspirehep.net/authors/1908124?ui-citation-summary=true" target="_blank"><i class="fas fa-book"></i></a>
                 </div>
             </div>
         </div>
