--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,6 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="publications.html">Publications</a></li>
-                    <li><a href="cv.html">CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,9 +27,11 @@
         <div class="container">
             <h2>Publications</h2>
 
-            <div class="inspire-info-bar" style="display: flex; align-items: center; justify-content: center; gap: -0.3cm;">
+            <div class="inspire-info-bar">
                 <span id="inspire-update-info" style="align-self: center;"></span>
-                <button id="inspire-btn" class="btn inspire-btn" style="align-self: center; margin-top: 0;" onclick="window.open('https://inspirehep.net/authors/1908124?ui-citation-summary=true','_blank')">Inspire HEP</button>
+                                <button id="inspire-btn" class="btn inspire-btn" style="align-self: center; margin-top: 0; background: none; border: none; padding: 0; cursor: pointer; display: flex; align-items: center; margin-left:0.3cm;" onclick="window.open('https://inspirehep.net/authors/1908124?ui-citation-summary=true','_blank')">
+                                    <img src="img/inspire_logo.png" alt="Inspire HEP" style="height:34px; width:auto; display:block; border-radius: 7px; margin-right:0;">
+                                </button>
             </div>
 
             <!-- Sorting option moved below stats -->
@@ -62,10 +63,9 @@
                     <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
-                    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://orcid.org/your-orcid" target="_blank"><i class="fab fa-orcid"></i></a>
-                    <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/echaussidon" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://orcid.org/0000-0001-8996-4874" target="_blank"><i class="fab fa-orcid"></i></a>
+                    <a href="https://inspirehep.net/authors/1908124?ui-citation-summary=true" target="_blank"><i class="fas fa-book"></i></a>
                 </div>
         </div>
     </footer>
