--- a/research.html
+++ b/research.html
@@ -17,7 +17,6 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="publications.html">Publications</a></li>
-                    <li><a href="cv.html">CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,6 +26,13 @@
     <section class="to be done">
         <div class="container">
             <h2>To be done</h2>
+
+            Dans la selection QSO / Survey Validation: ne pas oublier d'ajouter les liens vers le site de DESI ou j'ai fait une letter et aussi le site du CEA ou j'apparait
+
+            Dans la section DESI BAO: mettre le liens vers le prix que DESI a recu ect... et dire que ceux sont les papiers ls plus citer ! 
+
+            Mettre un lien aussi vers le site de DESI DATA !
+
         </div>
     </section>
 
@@ -38,10 +44,9 @@
                     <p>&copy; 2025 Edmond Chaussidon. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
-                    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://orcid.org/your-orcid" target="_blank"><i class="fab fa-orcid"></i></a>
-                    <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/echaussidon" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://orcid.org/0000-0001-8996-4874" target="_blank"><i class="fab fa-orcid"></i></a>
+                    <a href="https://inspirehep.net/authors/1908124?ui-citation-summary=true" target="_blank"><i class="fas fa-book"></i></a>
                 </div>
             </div>
         </div>
