--- a/about.html
+++ b/about.html
@@ -182,6 +182,9 @@
                 </div>
                 <div class="bio">
                     <h2>About Me</h2>
+
+                    <p> <strong> TO BE DONE...</strong></p>
+
                     <p>I am a cosmologist specializing in [your specific research area]. My research focuses on understanding the fundamental properties of the universe, from its origins to its ultimate fate.</p>
                     
                     <p>With a background in [your educational background], I have dedicated my career to exploring questions about dark matter, cosmic microwave background radiation, and the large-scale structure of the universe.</p>
