--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             <h2>Featured Research</h2>
             <div class="research-grid">
                 <div class="research-item">
-                    <img src="img/desi_kitt_peak.jpg" alt="Research Project 1">
-                    <h3>Dark Matter Distribution</h3>
-                    <p>Investigating the spatial distribution of dark matter in galaxy clusters using advanced statistical methods.</p>
+                    <img src="img/research-placeholder-2.jpg" alt="Research Project 2">
+                    <h3>Primordial non-Gaussianity Measurement with DESI</h3>
+                    <p>to do</p>
                     <a href="research.html#project1" class="btn-small">Learn More</a>
                 </div>
                 <div class="research-item">
-                    <img src="images/research-placeholder-2.jpg" alt="Research Project 2">
-                    <h3>Cosmic Microwave Background</h3>
-                    <p>Analyzing fluctuations in the CMB to understand the early universe and cosmological parameters.</p>
+                    <img src="img/desi_kitt_peak.jpg" alt="Research Project 1">
+                    <h3>Early Dark Energy in light of DESI DR2 BAO</h3>
+                    <p>to do</p>
                     <a href="research.html#project2" class="btn-small">Learn More</a>
                 </div>
                 <div class="research-item">
-                    <img src="images/research-placeholder-3.jpg" alt="Research Project 3">
-                    <h3>Large-Scale Structure Formation</h3>
-                    <p>Simulating the evolution of cosmic structures from the early universe to present day.</p>
+                    <img src="img/research-placeholder-3.jpg" alt="Research Project 3">
+                    <h3>Quasar Target Selection for DESI</h3>
+                    <p>to do</p>
                     <a href="research.html#project3" class="btn-small">Learn More</a>
                 </div>
             </div>
