--- a/research.html
+++ b/research.html
@@ -22,10 +22,9 @@
         </div>
     </header>
 
-
-    <section class="to be done">
+    <section class="research-projects">
         <div class="container">
-            <h2>To be done</h2>
+            <h2>Research Projects</h2>
 
             Dans la selection QSO / Survey Validation: ne pas oublier d'ajouter les liens vers le site de DESI ou j'ai fait une letter et aussi le site du CEA ou j'apparait
 
@@ -33,9 +32,45 @@
 
             Mettre un lien aussi vers le site de DESI DATA !
 
-        </div>
-    </section>
+        <section id="project1" class="featured-research">
+            <div class="container">
+                <h2>Primordial non-Gaussianity Measurement with DESI</h2>
+            </div>
+                <p>
+                    xxxxx
+                </p>
+                <p>
+                    Highlights: xxx, xxx, xxx
+                </p>
+        </section>
 
+
+        <section id="project2" class="featured-research">
+            <div class="container">
+                <h2>Early Dark Energy in light of DESI DR2 BAO</h2>
+            </div>
+                <p>
+                    xxxxx
+                </p>
+                <p>
+                    Highlights: xxx, xxx, xxx
+                </p>
+        </section>
+
+
+        <section id="project3" class="featured-research">
+            <div class="container">
+                <h2>Quasar Target Selection for DESI</h2>
+            </div>
+                <p>
+                    xxxxx
+                </p>
+                <p>
+                    Highlights: xxx, xxx, xxx
+                </p>
+        </section>
+    </div>
+    </section>
 
     <footer>
         <div class="container">
