--- a/index.html
+++ b/index.html
@@ -44,22 +44,28 @@
             <h2>Featured Research</h2>
             <div class="research-grid">
                 <div class="research-item">
-                    <img src="img/research-placeholder-2.jpg" alt="Research Project 2">
+                    <img src="img/research-placeholder-2.jpg" alt="Research Project 1">
                     <h3>Primordial non-Gaussianity Measurement with DESI</h3>
                     <p>to do</p>
                     <a href="research.html#project1" class="btn-small">Learn More</a>
                 </div>
                 <div class="research-item">
-                    <img src="img/desi_kitt_peak.jpg" alt="Research Project 1">
-                    <h3>Early Dark Energy in light of DESI DR2 BAO</h3>
+                    <img src="img/research-placeholder-2.jpg" alt="Research Project 2">
+                    <h3>kSZ velocity reconstruction of DESI galaxies</h3>
                     <p>to do</p>
                     <a href="research.html#project2" class="btn-small">Learn More</a>
                 </div>
                 <div class="research-item">
-                    <img src="img/research-placeholder-3.jpg" alt="Research Project 3">
-                    <h3>Quasar Target Selection for DESI</h3>
+                    <img src="img/desi_kitt_peak.jpg" alt="Research Project 3">
+                    <h3>Early Dark Energy in light of DESI DR2 BAO</h3>
                     <p>to do</p>
                     <a href="research.html#project3" class="btn-small">Learn More</a>
+                </div>
+                <div class="research-item">
+                    <img src="img/quasar_artist.jpg" alt="Research Project 4">
+                    <h3>Quasar Target Selection for DESI</h3>
+                    <p>credit: https://www.eso.org/public/news/eso1122/</p>
+                    <a href="research.html#project4" class="btn-small">Learn More</a>
                 </div>
             </div>
         </div>
