--- a/research.html
+++ b/research.html
@@ -44,10 +44,35 @@
                 </p>
         </section>
 
-
         <section id="project2" class="featured-research">
             <div class="container">
+                <h2>kSZ velocity reconstruction of DESI galaxies</h2>
+                
+            </div>
+                <p>
+                    xxxxx
+                </p>
+                <p>
+                    Highlights: xxx, xxx, xxx
+                </p>
+        </section>
+
+        <section id="project3" class="featured-research">
+            <div class="container">
                 <h2>Early Dark Energy in light of DESI DR2 BAO</h2>
+            </div>
+                <p>
+                    xxxxx
+                </p>
+                <p>
+                    Highlights: xxx, xxx, xxx
+                </p>
+        </section>
+
+
+        <section id="project4" class="featured-research">
+            <div class="container">
+                <h2>Quasar Target Selection for DESI</h2>
             </div>
                 <p>
                     xxxxx
